<resources>
    <string name="app_name">ING_APP</string>
    <string name="show_info">About app</string>
    <string name="display_type">For %s</string>
    <string name="id">id: </string>
    <string name="title">Title: </string>
    <string name="test">This is a test</string>
    <string name="username">Janek</string>
    <string name="comments">Comments</string>
    <string name="comment_image">comment_image</string>

    <string name="user_username">Username</string>
    <string name="user_email">Email</string>
    <string name="user_website">Website</string>
    <string name="user_street">Street</string>
    <string name="user_city">City</string>
    <string name="user_zipcode">Zip-code</string>
    <string name="user_latitude">Latitude</string>
    <string name="user_longitude">Longitude</string>
    <string name="user_photos">Photos</string>
    <string name="comment_name">Comment Name</string>
    <string name="comment_email">Comment E-mail</string>
    <string name="comment_body">Comment Body</string>

    <string name="photo_id">Photo ID</string>
    <string name="photo_url">photo URL</string>


    <!--    MAPS    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDoHg_DZavRaNYX6275NRmU851fhdxedb0</string>

</resources>