<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.msjtrs.ing_app.ui.UserDetailViewModel"/>
        <variable
            name="post"
            type="com.msjtrs.ing_app.domain.PostProperty"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:padding="6dp"
        tools:context=".DetailFragment">

        <!-- username -->
        <TextView
            android:id="@+id/user_text"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Username: ` + viewModel.selectedProperty.posterName}"
            tools:text="@string/user_username"
            android:textSize="18sp" />

        <!-- email -->
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`E-mail: ` + viewModel.selectedProperty.posterEmail}"
            tools:text="@string/user_email"
            android:textSize="18sp" />

        <!-- website -->
        <TextView
            android:id="@+id/user_website"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Website: ` + viewModel.selectedProperty.posterWebsite}"
            tools:text="@string/user_website"
            android:textSize="18sp" />

        <!-- street -->
        <TextView
            android:id="@+id/user_street"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Street: ` + viewModel.selectedProperty.posterStreet}"
            tools:text="@string/user_street"
            android:textSize="18sp" />

        <!-- city -->
        <TextView
            android:id="@+id/user_city"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`City: ` + viewModel.selectedProperty.posterCity}"
            tools:text="@string/user_city"
            android:textSize="18sp" />

        <!-- zip-code -->
        <TextView
            android:id="@+id/user_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Zipcode: ` + viewModel.selectedProperty.posterZipcode}"
            tools:text="@string/user_zipcode"
            android:textSize="18sp" />

        <!-- latitude -->
        <TextView
            android:id="@+id/user_latitude"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Latitude: ` + viewModel.selectedProperty.posterGeoLatitude}"
            tools:text="@string/user_latitude"
            android:textSize="18sp" />

        <!-- Longitude -->
        <TextView
            android:id="@+id/user_Longitude"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@{`Longitude: ` + viewModel.selectedProperty.posterGeoLongitude}"
            tools:text="@string/user_longitude"
            android:textSize="18sp" />

        <!-- loading - soon to be google map based on latitude and longitude -->
        <ImageView
            android:id="@+id/user_geo"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/loading_animation" />

        <!-- photos -->
        <TextView
            android:id="@+id/user_photos"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto"
            android:scaleType="centerCrop"
            android:text="@string/user_photos"
            tools:text="@string/user_photos"
            android:textSize="18sp" />
    </LinearLayout>
</layout>