<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.msjtrs.ing_app.ui.UserViewModel"/>
        <variable
            name="post"
            type="com.msjtrs.ing_app.domain.UserProperty"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="6dp"
            tools:context=".DetailFragment">

            <!-- username -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@{viewModel.selectedProperty.username}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/user_username" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@{viewModel.selectedProperty.email}"
                    android:textSize="15sp"
                    tools:text="@string/user_email" />

                <TextView
                    android:id="@+id/user_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@{viewModel.selectedProperty.website}"
                    android:textSize="15sp"
                    tools:text="@string/user_website" />

                <TextView
                    android:id="@+id/user_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@{viewModel.selectedProperty.address.street}"
                    android:textSize="15sp"
                    tools:text="@string/user_street" />

                <TextView
                    android:id="@+id/user_city_plus_zip-code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@{viewModel.selectedProperty.address.city + ` ` + viewModel.selectedProperty.address.zipcode}"
                    android:textSize="15sp"
                    tools:text="City + Zip-code" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#5E5E5E"
                    android:padding="6dp">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map_view"
                        android:layout_width="280dp"
                        android:layout_height="400dp"
                        android:layout_gravity="center_horizontal" />
                </FrameLayout>
            </LinearLayout>

            <!-- email -->

            <!-- website -->

            <!-- city -->

            <!-- zip-code -->


            <!-- google map -->

            <!-- SEPARATORS (gray horizontal lines) -->
            <View
                style="@style/Divider"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <!-- photos - link to album with user's photos -->
                <TextView
                    android:id="@+id/user_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto"
                    android:scaleType="centerCrop"
                    android:text="@string/user_photos"
                    android:textSize="18sp"
                    tools:text="@string/user_photos" />


        </LinearLayout>
    </ScrollView>
</layout>